# OOP_Labs

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
.github/workflows/: blank.yml  ci.yml
lab01/: CMakeLists.txt  main.cpp
lab01/include/: solution.h
lab01/test/: tests01.cpp
lab02/: CMakeLists.txt  main.cpp
lab02/include/: solution.h
lab02/src/: solution.cpp
lab02/test/: tests01.cpp  tests02.cpp
lab03/: CMakeLists.txt
lab03/include/: FigureValidator.h  SquareValidator.h  TriangleValidator.h  square.h  triangle.h
lab03/src/: SquareValidator.cpp  TriangleValidator.cpp  figure.cpp  main.cpp  square.cpp  tests.cpp  triangle.cpp
tools/: config.yaml
